force-app/main/default/objects/BBC_Imported_Transaction__c/BBC_Imported_Transaction__c.object-meta.xml
<CustomObject>
    <description>Carrier transactions that have been populated through integration. Primarily used by XRS for AT&amp;T 3PP integration.</description>
    <label>BBC Imported Transaction</label>
    <nameField>
        <label>BBC Imported Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BBC Imported Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>