force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <formula>CASE(Action_Type__c,
&apos;1&apos;, &apos;Add&apos;,
&apos;2&apos;, &apos;Cancel&apos;,
&apos;3&apos;, &apos;Suspend&apos;,
&apos;4&apos;, &apos;Modify&apos;,
&apos;5&apos;, &apos;Resume&apos;,
&apos;Error, no action type&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action</label>
    <type>Text</type>
</CustomField>