force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>Action to be triggered by this record</description>
    <label>Action Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>