force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Billing_Note__c.field-meta.xml
<CustomField>
    <fullName>Billing_Note__c</fullName>
    <description>Billing Note</description>
    <label>Billing Note</label>
    <type>TextArea</type>
</CustomField>