force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <description>The name of the company</description>
    <label>Business Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>