force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Can_Be_Reached_Phone__c.field-meta.xml
<CustomField>
    <fullName>Can_Be_Reached_Phone__c</fullName>
    <label>Can Be Reached Phone</label>
    <type>Phone</type>
</CustomField>