force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <length>25</length>
    <type>Text</type>
</CustomField>