force-app/main/default/objects/BBC_Imported_Transaction__c/fields/CBID__c.field-meta.xml
<CustomField>
    <fullName>CBID__c</fullName>
    <label>AT&amp;T BAN (CBID)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>