force-app/main/default/objects/BBC_Imported_Transaction__c/fields/CCID__c.field-meta.xml
<CustomField>
    <fullName>CCID__c</fullName>
    <label>AT&amp;T FAN (CCID)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>