force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Create_Date__c</fullName>
    <label>Create Date</label>
    <length>30</length>
    <type>Text</type>
</CustomField>