force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Create_SO_RMA__c.field-meta.xml
<CustomField>
    <fullName>Create_SO_RMA__c</fullName>
    <label>Create SO/RMA</label>
    <length>12</length>
    <type>Text</type>
</CustomField>