force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Created__c</fullName>
    <label>Date Created</label>
    <length>25</length>
    <type>Text</type>
</CustomField>