force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Email_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_Type__c</fullName>
    <description>Business or Personal</description>
    <label>Email Type</label>
    <length>8</length>
    <type>Text</type>
</CustomField>