force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Error_in_Processing__c.field-meta.xml
<CustomField>
    <fullName>Error_in_Processing__c</fullName>
    <label>Error in Processing</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>