force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Hide__c.field-meta.xml
<CustomField>
    <fullName>Hide__c</fullName>
    <label>Hide</label>
    <length>12</length>
    <type>Text</type>
</CustomField>