force-app/main/default/objects/BBC_Imported_Transaction__c/fields/ICCID__c.field-meta.xml
<CustomField>
    <fullName>ICCID__c</fullName>
    <label>ICCID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>