force-app/main/default/objects/BBC_Imported_Transaction__c/fields/IMEI__c.field-meta.xml
<CustomField>
    <fullName>IMEI__c</fullName>
    <label>IMEI</label>
    <length>25</length>
    <type>Text</type>
</CustomField>