force-app/main/default/objects/BBC_Imported_Transaction__c/fields/IMSI__c.field-meta.xml
<CustomField>
    <fullName>IMSI__c</fullName>
    <label>IMSI</label>
    <length>25</length>
    <type>Text</type>
</CustomField>