force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <label>Inactive</label>
    <length>3</length>
    <type>Text</type>
</CustomField>