force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>Internal_ID__c</fullName>
    <description>Internal ID</description>
    <label>Internal ID</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>