force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified__c</fullName>
    <label>Last Modified</label>
    <length>25</length>
    <type>Text</type>
</CustomField>