force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Legacy_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Source_ID__c</fullName>
    <description>Unique identifier from external system (i.e. NetSuite Internal ID)</description>
    <externalId>true</externalId>
    <label>Legacy Source ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>