force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <length>25</length>
    <type>Text</type>
</CustomField>