force-app/main/default/objects/BBC_Imported_Transaction__c/fields/MSISDN__c.field-meta.xml
<CustomField>
    <fullName>MSISDN__c</fullName>
    <label>Phone Number (MSISDN)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>