force-app/main/default/objects/BBC_Imported_Transaction__c/fields/NS_Transaction__c.field-meta.xml
<CustomField>
    <fullName>NS_Transaction__c</fullName>
    <label>NS Transaction</label>
    <length>25</length>
    <type>Text</type>
</CustomField>