force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <length>25</length>
    <type>Text</type>
</CustomField>