force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <label>Order Date</label>
    <length>30</length>
    <type>Text</type>
</CustomField>