force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Parent_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Subscription_ID__c</fullName>
    <label>Parent Subscription ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>