force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_ID__c</fullName>
    <label>Partner ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>