force-app/main/default/objects/BBC_Imported_Transaction__c/fields/PCID__c.field-meta.xml
<CustomField>
    <fullName>PCID__c</fullName>
    <label>Company Name (PCID)</label>
    <length>55</length>
    <type>Text</type>
</CustomField>