force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Previous_Address__c.field-meta.xml
<CustomField>
    <fullName>Previous_Address__c</fullName>
    <description>Previous Address</description>
    <label>Previous Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>