force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Previous_CBID__c.field-meta.xml
<CustomField>
    <fullName>Previous_CBID__c</fullName>
    <label>Previous CBID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>