force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Previous_CCID__c.field-meta.xml
<CustomField>
    <fullName>Previous_CCID__c</fullName>
    <label>Previous CCID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>