force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Previous_City__c.field-meta.xml
<CustomField>
    <fullName>Previous_City__c</fullName>
    <label>Previous City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>