force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Previous_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Country_Name__c</fullName>
    <description>Previous Country Name</description>
    <label>Previous Country Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>