force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Previous_Email__c.field-meta.xml
<CustomField>
    <fullName>Previous_Email__c</fullName>
    <description>Previous Email Address</description>
    <label>Previous Email</label>
    <type>Email</type>
</CustomField>