force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Previous_MSISDN__c.field-meta.xml
<CustomField>
    <fullName>Previous_MSISDN__c</fullName>
    <label>Previous MSISDN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>