force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Previous_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_Phone_Number__c</fullName>
    <description>Previous Phone Number</description>
    <label>Previous Phone Number</label>
    <type>Phone</type>
</CustomField>