force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Previous_State__c.field-meta.xml
<CustomField>
    <fullName>Previous_State__c</fullName>
    <label>Previous State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>