force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Previous_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Previous_Zip_Code__c</fullName>
    <description>Previous Zip Code</description>
    <label>Previous Zip Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>