force-app/main/default/objects/BBC_Imported_Transaction__c/fields/PSID__c.field-meta.xml
<CustomField>
    <fullName>PSID__c</fullName>
    <label>PSID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>