force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Responded__c.field-meta.xml
<CustomField>
    <fullName>Responded__c</fullName>
    <label>Responded</label>
    <length>3</length>
    <type>Text</type>
</CustomField>