force-app/main/default/objects/BBC_Imported_Transaction__c/fields/SO_RMA_Number__c.field-meta.xml
<CustomField>
    <fullName>SO_RMA_Number__c</fullName>
    <label>SO/RMA Number</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>