force-app/main/default/objects/BBC_Imported_Transaction__c/fields/XML__c.field-meta.xml
<CustomField>
    <fullName>XML__c</fullName>
    <description>XML Code</description>
    <label>XML</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>