force-app/main/default/objects/BBC_Imported_Transaction__c/fields/Zip_Code_Extension__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_Extension__c</fullName>
    <description>Zip Code Extension</description>
    <label>Zip Code Extension</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>