force-app/main/default/objects/BBC_Imported_Transaction__c/listViews/Codys_View2.listView-meta.xml
<ListView>
    <fullName>Codys_View2</fullName>
    <columns>NAME</columns>
    <columns>Action_Type__c</columns>
    <columns>Business_Name__c</columns>
    <columns>Date_Created__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Codys View2</label>
    <language>en_US</language>
    <sharedTo>
        <group>SFDC_Support</group>
    </sharedTo>
</ListView>